<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>lapissea.jdatablockfs</groupId>
		<artifactId>JDatablockFS</artifactId>
		<version>1.0</version>
		<relativePath>../../pom.xml</relativePath>
	</parent>
	
	<groupId>lapissea.jdatablockfs.demos</groupId>
	<artifactId>Photos</artifactId>
	
	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	
	<dependencies>
		<dependency>
			<groupId>lapissea.jdatablockfs</groupId>
			<artifactId>jdbfs-core</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>lapissea.jdatablockfs</groupId>
			<artifactId>jdbfs-tools</artifactId>
			<version>${project.version}</version>
		</dependency>
	</dependencies>
	
	<build>
		<directory>${child-build-dir}/${project.artifactId}/</directory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin-version}</version>
				<configuration>
					<release>${maven.compiler.release}</release>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
